--- a/public/stylesheets/sass/shared/_moment.sass
+++ b/public/stylesheets/sass/shared/_moment.sass
@@ -43,6 +43,13 @@
     margin: 0
     th
       padding: 3px
+      img
+        overflow: hidden
+        width: 24px
+        height: 24px
+        display: block
+        text-align: center
+        background: white
     td
       padding: 3px
       text-align: left
